# shiny-lumberjack

./: Cargo.toml  README.md
assets/player/: lumberjack.player.yaml
src/: animate.rs  asset_loader.rs  assets.rs  camera.rs  consts.rs  main.rs  metadata.rs  movement.rs  player.rs
