[package]
authors = ["The shiny lumberjack"]
description = "A 2D side-scroller beatemup"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "shiny-lumberjack"
version = "0.1.0"

[dependencies]
bevy_kira_audio = { version = "0.19.0", features = ["mp3"] }
egui_extras = "0.27.2"
bevy = "0.13.0"
bevy_rapier2d = "0.25.0"
anyhow = "1.0.58"
bevy-parallax = "0.8.0"
getrandom = { version = "0.2", features = ["js"] }
iyes_loopless = { version = "0.9.0", features = ["states"] }
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.9.2"
structopt = "0.3.26"
thiserror = "1.0.31"

# Debug tools
bevy-inspector-egui = { version = "0.23.4" }
bevy-inspector-egui-rapier = { version = "0.9.0", features = ["rapier2d"] }
bevy_mod_debugdump = { version = "0.10.0", optional = true }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
